--- a/documentation/demos/demo1/path_org.html
+++ b/documentation/demos/demo1/path_org.html
@@ -279,7 +279,7 @@
                     setFont("20px sans-serif").
                     setText("Conpound Path").
                     calcTextSize(director).
-                    setFillStyle(gradient).
+                    setTextFillStyle(gradient).
                     setOutline(true).
                     cacheAsBitmap();
             cc1.addChild(text.setLocation((cc1.width - text.textWidth) / 2, 0));
@@ -288,7 +288,7 @@
                 setFont("20px sans-serif").
                 setText("Quadric,Cubic,Line segments").
                 calcTextSize(director).
-                setFillStyle(gradient).
+                setTextFillStyle(gradient).
                 setOutline(true).
                 cacheAsBitmap();
 
@@ -298,7 +298,7 @@
                     setFont("20px sans-serif").
                     setText("Fish Path").
                     calcTextSize(director).
-                    setFillStyle(gradient).
+                    setTextFillStyle(gradient).
                     setOutline(true).
                     cacheAsBitmap();
             cc1.addChild( text4.setLocation((cc1.width - text4.textWidth) / 2, 50) );
@@ -307,7 +307,7 @@
                     setFont("20px sans-serif").
                     setText("Interpolators").
                     calcTextSize(director).
-                    setFillStyle(gradient).
+                    setTextFillStyle(gradient).
                     setOutline(true).
                     cacheAsBitmap();
             cc1.addChild(text3.setLocation((cc1.width - text3.textWidth) / 2, 70));
