--- a/documentation/demos/demo12+1/transitions_org.html
+++ b/documentation/demos/demo12+1/transitions_org.html
@@ -110,7 +110,7 @@
                     setText("Scene "+n).
                     calcTextSize(director).
                     setAlign("center").
-                    setFillStyle(color).
+                    setTextFillStyle(color).
                     setOutline(true).
                     cacheAsBitmap().
                     enableEvents(false).
