--- a/documentation/demos/demo14/timers_org.html
+++ b/documentation/demos/demo14/timers_org.html
@@ -109,7 +109,7 @@
             var actor= new CAAT.TextActor().
                     setFont("100px Lucida sans").
                     calcTextSize(director).
-                    setFillStyle(color).
+                    setTextFillStyle(color).
                     setOutline(true).
                     enableEvents(false);
 
