--- a/documentation/demos/demo4/coordinates_org.html
+++ b/documentation/demos/demo4/coordinates_org.html
@@ -138,7 +138,7 @@
                     setTextBaseline('top').
                     setText("").
                     setLocation(15,20).
-                    setFillStyle('black').
+                    setTextFillStyle('black').
                     setOutlineColor('#aaa').
                     setOutline(true);
             scene.addChild(coords);
@@ -149,7 +149,7 @@
                 setTextBaseline('top').
                 setText("").
                 setLocation(15,42).
-                setFillStyle('black').
+                setTextFillStyle('black').
                 setOutlineColor('#aaa').
                 setOutline(true);
             scene.addChild(coords2);
@@ -160,7 +160,7 @@
                 setTextBaseline('top').
                 setText("").
                 setLocation(15,64).
-                setFillStyle('black').
+                setTextFillStyle('black').
                 setOutlineColor('#aaa').
                 setOutline(true);
             scene.addChild(coords3);
@@ -323,7 +323,7 @@
                     setText("Perfect Pixel").
                     calcTextSize(director).
                     setTextAlign("center").
-                    setFillStyle(gradient).
+                    setTextFillStyle(gradient).
                     setOutline(true).
                     cacheAsBitmap();
             cc1.addChild(text.setLocation((cc1.width-text.width)/2,0));
@@ -333,7 +333,7 @@
                     setTextAlign("center").
                     setText("Collision detection").
                     calcTextSize(director).
-                    setFillStyle(gradient).
+                    setTextFillStyle(gradient).
                     setOutline(true).
                     cacheAsBitmap();
             cc1.addChild(text2.setLocation((cc1.width-text2.width)/2,30));
@@ -343,7 +343,7 @@
                     setTextAlign("center").
                     setText("Drag Enabled").
                     calcTextSize(director).
-                    setFillStyle(gradient).
+                    setTextFillStyle(gradient).
                     setOutline(true).
                     cacheAsBitmap();
             cc1.addChild(text3.setLocation((cc1.width-text3.width)/2,60));
@@ -353,7 +353,7 @@
                     setTextAlign("center").
                     setText("Drag + [Control,Shift,Alt]").
                     calcTextSize(director).
-                    setFillStyle('black').
+                    setTextFillStyle('black').
                     setOutline(true).
                     cacheAsBitmap();
             cc1.addChild(text4.setLocation((cc1.width-text4.width)/2,100));
@@ -363,7 +363,7 @@
                     setTextAlign("center").
                     setText("Double Click").
                     calcTextSize(director).
-                    setFillStyle('black').
+                    setTextFillStyle('black').
                     setOutline(true).
                     cacheAsBitmap();
             cc1.addChild(text5.setLocation((cc1.width-text5.width)/2,120));
