--- a/documentation/demos/demo7/anchors_org.html
+++ b/documentation/demos/demo7/anchors_org.html
@@ -218,7 +218,7 @@
                     setFont("50px sans-serif").
                     setText("Anchored").
                     setTextAlign("center").
-                    setFillStyle(gradient).
+                    setTextFillStyle(gradient).
                     setOutline(true).
                     calcTextSize(director).
                     cacheAsBitmap();
@@ -228,7 +228,7 @@
                     setFont("35px sans-serif").
                     setTextAlign("center").
                     setText("Affine transforms").
-                    setFillStyle(gradient).
+                    setTextFillStyle(gradient).
                     setOutline(true).
                     calcTextSize(director).
                     cacheAsBitmap();
