--- a/documentation/demos/demo9/behaviors_org.html
+++ b/documentation/demos/demo9/behaviors_org.html
@@ -157,7 +157,7 @@
             
 
             /**
-             * create 10x10 actors with random index.
+             * create N by M actors with random index.
              */
             var numberW= ci.singleWidth;
             var numberH= ci.singleHeight;
