--- a/documentation/demos/menu/menu.html
+++ b/documentation/demos/menu/menu.html
@@ -30,6 +30,7 @@
     <li><a href="../demo16/mask.html">Masking</a></li>
     <li><a href="../demo17/video.html">Video Tag</a></li>
     <li><a href="../demo18/keys_org.html">Keyboard management</a></li>
+    <li><a href="../demo19/collision.html">Collision detection</a></li>
 </ul>
        
 <h1>Tutorial</h1>
