--- a/documentation/demos/index.html
+++ b/documentation/demos/index.html
@@ -41,6 +41,9 @@
     <li><a href="demo15/logofrenzy.html">SpriteImage</a></li>
     <li><a href="demo16/mask.html">Masking</a></li>
     <li><a href="demo17/video.html">Video</a></li>
+    <li><a href="demo18/keys_org.html">Keyboard management</a></li>
+    <li><a href="demo19/collision.html">Collision detection</a></li>
+
 </ul>
 
 </body>
