--- a/documentation/demos/demo18/keys_org.html
+++ b/documentation/demos/demo18/keys_org.html
@@ -224,7 +224,7 @@
 </body>
 
 <script type="text/javascript" src="../menu/menu.js"></script>
-<script type="text/javascript" src="../../../caat/build/caat.js"></script>
+<script type="text/javascript" src="../../../build/caat.js"></script>
 <script type="text/javascript" src="../templates/startup-wo-splash/template.js"></script>
 <script type="text/javascript">
     /**
