--- a/documentation/jsdoc/symbols/src/_Users_ibon_js_CAAT_src_model_scene.js.html
+++ b/documentation/jsdoc/symbols/src/_Users_ibon_js_CAAT_src_model_scene.js.html
@@ -500,5 +500,5 @@
 <span class='line'>493</span> </span><span class="WHIT">        </span><span class="PUNC">}</span><span class="WHIT">
 <span class='line'>494</span> </span><span class="WHIT">	</span><span class="PUNC">}</span><span class="PUNC">;</span><span class="WHIT">
 <span class='line'>495</span> 
-<span class='line'>496</span> </span><span class="WHIT">    </span><span class="NAME">extend</span><span class="PUNC">(</span><span class="WHIT"> </span><span class="NAME">CAAT.Scene</span><span class="PUNC">,</span><span class="WHIT"> </span><span class="NAME">CAAT.ActorContainer</span><span class="PUNC">,</span><span class="WHIT"> </span><span class="KEYW">null</span><span class="PUNC">)</span><span class="PUNC">;</span><span class="WHIT">
+<span class='line'>496</span> </span><span class="WHIT">    </span><span class="NAME">extend</span><span class="PUNC">(</span><span class="WHIT"> </span><span class="NAME">CAAT.Scene</span><span class="PUNC">,</span><span class="WHIT"> </span><span class="NAME">CAAT.ActorContainer</span><span class="WHIT"> </span><span class="PUNC">)</span><span class="PUNC">;</span><span class="WHIT">
 <span class='line'>497</span> </span><span class="PUNC">}</span><span class="PUNC">)</span><span class="PUNC">(</span><span class="PUNC">)</span><span class="PUNC">;</span></pre></body></html>
