--- a/documentation/demos/demo2/fishpond_org.html
+++ b/documentation/demos/demo2/fishpond_org.html
@@ -89,7 +89,7 @@
      * THE SOFTWARE.
      *
      */
-
+CAAT.DEBUG=1;
     (function() {
         /**
          * Startup it all up when the document is ready.
